# openresearch-mcp

./: .gitignore  Dockerfile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
src/openresearch_mcp/: __init__.py  constants.py  formatting.py  http.py  identifiers.py  safefetch.py  server.py
src/openresearch_mcp/tools/: academic.py  bluesky.py  core.py  crypto.py  europepmc.py  fx.py  github.py  news.py  sec.py  weather.py  web.py  worldbank.py  youtube.py
tests/: conftest.py  test_academic.py  test_bluesky.py  test_core.py  test_crypto.py  test_europepmc.py  test_formatting.py  test_fx.py  test_github.py  test_http.py  test_identifiers.py  test_integration_scenarios.py  test_news.py  test_safefetch.py  test_sec.py  test_weather.py  test_web.py  test_worldbank.py  test_youtube.py
