[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openresearch-mcp"
version = "0.1.5"
description = "Zero-auth multi-source research MCP server — web, GitHub, Hacker News, Stack Overflow, arXiv, OpenAlex, YouTube transcripts, and more."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Alex Anokhin", email = "olanokhin@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "research",
    "llm",
    "ai",
    "arxiv",
    "openalex",
    "duckduckgo",
    "github",
    "youtube",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "ddgs>=9.0",
    "pypdf>=5.0",
    "youtube-transcript-api>=1.0",
]

[project.urls]
Homepage = "https://github.com/olanokhin/openresearch-mcp"
Repository = "https://github.com/olanokhin/openresearch-mcp"
"Bug Tracker" = "https://github.com/olanokhin/openresearch-mcp/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
openresearch-mcp = "openresearch_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openresearch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "httpx"]
